--- a/bio.html
+++ b/bio.html
@@ -62,97 +62,31 @@
                 <form action="age.html" class="job-application-form">
                   <div class="input-type-block">
                     <div class="row">
-                      <div class="col-sm-4">
-                        <div class="input-type-block radio-field pb-5">
-                          <h4>Service <span class="required">*</span></h4>
-                          <div class="form-group">
-                            <div class="custom-radio">
-                              <input type="radio" name="salary-range" class="custom-control-input" id="radio1">
-                              <label class="custom-control-label" for="radio1">KA</label>
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <div class="custom-radio">
-                              <input type="radio" name="salary-range" class="custom-control-input" id="radio2">
-                              <label class="custom-control-label" for="radio2">KAF</label>
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <div class="custom-radio">
-                              <input type="radio" name="salary-range" class="custom-control-input" id="radio3">
-                              <label class="custom-control-label" for="radio3">KN</label>
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <div class="custom-radio">
-                              <input type="radio" name="salary-range" class="custom-control-input" id="radio4">
-                              <label class="custom-control-label" for="radio4">Other</label>
-                            </div>
+                      <div class="col-md-6">
+                        <div class="form-group country-select">
+                          <label for="inputCountry" class="input-label"><span>*</span> Service</label>
+                          <div class="select-input choose-country">
+                            <span></span>
+                              <select id="inputCountry" class="form-control">
+                                <option value="">SELECT</option>
+                                <option value="">GOOD</option>
+                                <option value="">VERY GOOD</option>
+                                <option value="">EXCELENT</option>
+                              </select>
                           </div>
                         </div>
                       </div>
-                      <div class="col-sm-8">
+                      <div class="col-sm-6">
                         <div class="form-group">
                           <label class="input-label" for="lName"><span>*</span>Last Unit</label>
                           <input type="text" class="form-control" id="lName" placeholder="Your Service Unit Before Retirement">
                         </div>
+                      </div>
+                      <div class="col-sm-6">
                         <div class="form-group">
-                          <label class="input-label" for="inputPhone">Enlisting Year (try to recall the year of enlistment)</label>
-                          <div class="birth-date">
-                            <div class="select-input birth-date-input">
-                              <span></span>
-                              <select id="inputDate" class="form-control">
-                                <option value="">Date</option>
-                                <option value="">01</option>
-                                <option value="">02</option>
-                                <option value="">03</option>
-                                <option value="">04</option>
-                                <option value="">05</option>
-                                <option value="">06</option>
-                                <option value="">07</option>
-                                <option value="">08</option>
-                                <option value="">09</option>
-                                <option value="">10</option>
-                                <option value="">11</option>
-                                <option value="">12</option>
-                                <option value="">13</option>
-                                <option value="">14</option>
-                                <option value="">15</option>
-                                <option value="">16</option>
-                                <option value="">17</option>
-                                <option value="">18</option>
-                                <option value="">19</option>
-                                <option value="">20</option>
-                                <option value="">21</option>
-                                <option value="">22</option>
-                                <option value="">23</option>
-                                <option value="">24</option>
-                                <option value="">25</option>
-                                <option value="">26</option>
-                                <option value="">27</option>
-                                <option value="">28</option>
-                                <option value="">29</option>
-                                <option value="">30</option>
-                              </select>
-                            </div>
-                            <div class="select-input birth-date-input">
-                              <span></span>
-                              <select id="inputDate" class="form-control">
-                                <option value="">Month</option>
-                                <option value="">01</option>
-                                <option value="">02</option>
-                                <option value="">03</option>
-                                <option value="">04</option>
-                                <option value="">05</option>
-                                <option value="">06</option>
-                                <option value="">07</option>
-                                <option value="">08</option>
-                                <option value="">09</option>
-                                <option value="">10</option>
-                                <option value="">11</option>
-                                <option value="">12</option>
-                              </select>
-                            </div>
+                          <label class="input-label" for="inputPhone">Retirement  Date</label>
+                          <div class="birth-date d-block">
+
                             <div class="select-input birth-date-input">
                               <span></span>
                               <select id="inputDate" class="form-control">
@@ -181,63 +115,12 @@
                             </div>
                           </div>
                         </div>
+                      </div>
+                      <div class="col-sm-6">
                         <div class="form-group">
-                          <label class="input-label" for="inputPhone">Retirement  Date</label>
-                          <div class="birth-date">
-                            <div class="select-input birth-date-input">
-                              <span></span>
-                              <select id="inputDate" class="form-control">
-                                <option value="">Date</option>
-                                <option value="">01</option>
-                                <option value="">02</option>
-                                <option value="">03</option>
-                                <option value="">04</option>
-                                <option value="">05</option>
-                                <option value="">06</option>
-                                <option value="">07</option>
-                                <option value="">08</option>
-                                <option value="">09</option>
-                                <option value="">10</option>
-                                <option value="">11</option>
-                                <option value="">12</option>
-                                <option value="">13</option>
-                                <option value="">14</option>
-                                <option value="">15</option>
-                                <option value="">16</option>
-                                <option value="">17</option>
-                                <option value="">18</option>
-                                <option value="">19</option>
-                                <option value="">20</option>
-                                <option value="">21</option>
-                                <option value="">22</option>
-                                <option value="">23</option>
-                                <option value="">24</option>
-                                <option value="">25</option>
-                                <option value="">26</option>
-                                <option value="">27</option>
-                                <option value="">28</option>
-                                <option value="">29</option>
-                                <option value="">30</option>
-                              </select>
-                            </div>
-                            <div class="select-input birth-date-input">
-                              <span></span>
-                              <select id="inputDate" class="form-control">
-                                <option value="">Month</option>
-                                <option value="">01</option>
-                                <option value="">02</option>
-                                <option value="">03</option>
-                                <option value="">04</option>
-                                <option value="">05</option>
-                                <option value="">06</option>
-                                <option value="">07</option>
-                                <option value="">08</option>
-                                <option value="">09</option>
-                                <option value="">10</option>
-                                <option value="">11</option>
-                                <option value="">12</option>
-                              </select>
-                            </div>
+                          <label class="input-label" for="inputPhone">Enlisting Year (try to recall the year of enlistment)</label>
+                          <div class="birth-date d-block">
+
                             <div class="select-input birth-date-input">
                               <span></span>
                               <select id="inputDate" class="form-control">
